# ai-simultaneous-interpretation-assistant

./: .env.example  .gitignore  README.md  pyproject.toml
.github/: pull_request_template.md
app/: __init__.py  main.py
app/asr/: __init__.py  baidu.py  factory.py  mock.py  openai_compatible.py  types.py
app/audio/: __init__.py  buffer.py  capture.py  vad.py
app/core/: asr_sentence.py  chinese_caption.py  config.py  demo_stream.py  live_caption.py  recognition_profile.py  subtitle.py  transcript_session.py
app/storage/: __init__.py  transcript_store.py
app/translate/: __init__.py  baidu_mt.py  factory.py  incremental.py  language_codes.py  openai_compatible.py  stream_manager.py  types.py
app/ui/: main_window.py  realtime_worker.py  smooth_caption.py  subtitle_overlay.py  theme.py
assets/models/: README.md
docs/: PR计划.md  方案设计.md
tests/: test_asr.py  test_asr_sentence.py  test_audio_buffer.py  test_audio_capture.py  test_audio_vad.py  test_chinese_caption.py  test_config.py  test_demo_stream.py  test_incremental_translation.py  test_live_caption.py  test_main.py  test_realtime_worker.py  test_realtime_worker_translation.py  test_recognition_profile.py  test_smooth_caption.py  test_subtitle_overlay.py  test_subtitle_state.py  test_transcript_session.py  test_transcript_store.py  test_translate_baidu_mt.py  test_translation.py  test_translation_stream_manager.py
