[project]
name = "ai-simultaneous-interpretation-assistant"
version = "0.1.0"
description = "Windows desktop AI simultaneous interpretation assistant."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

